<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:scrollbarStyle="insideOverlay">


    <android.support.constraint.ConstraintLayout


        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.liebert.bmiCalc.MainActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mass_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mass_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mass_hint_kg"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/height_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mass_til">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/height_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_hint_m"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/calcuate_bmi_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="26dp"
            android:text="@string/calculate_bmi_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height_til"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/your_bmi_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_bmi"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calcuate_bmi_btn" />

        <TextView
            android:id="@+id/bmi_tv"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintLeft_toLeftOf="@+id/your_bmi_label_tv"
            app:layout_constraintRight_toRightOf="@+id/your_bmi_label_tv"
            app:layout_constraintTop_toBottomOf="@+id/your_bmi_label_tv"
            app:layout_goneMarginBottom="64dp"
            tools:text="40"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/save_args_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_mass_height_btn"
            app:layout_constraintTop_toTopOf="@+id/calcuate_bmi_btn"
            android:layout_marginTop="0dp"
            app:layout_constraintRight_toLeftOf="@+id/calcuate_bmi_btn"
            android:layout_marginRight="8dp" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>