<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<fragment
    android:name="com.liebert.bmiCalc.SettingsFragment"
    android:id="@+id/weather_settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout="@layout/preference" />
</LinearLayout>