<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share_bmi"
        android:orderInCategory="110"
        android:title="@string/action_share_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_activity"
        android:orderInCategory="120"
        android:title="@string/action_about_activity_title"
        app:showAsAction="never" />

</menu>